--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
 	"compilerOptions": {
-		"target": "ES2019",
+		"target": "es2019",
 		"module": "commonjs",
 		"lib": [
-			"ES2019"
+			"es2019",
+			"es2020",
+			"es2022.error"
 		],
 		"declaration": true,
-		"outDir": "./dist",
+		"outDir": "./dist/",
 		"rootDir": "./",
 		"composite": true,
 		"removeComments": true,
@@ -22,11 +24,15 @@
 		"noUnusedParameters": true,
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
-		"moduleResolution": "node"
+		"useUnknownInCatchVariables": false,
+		"moduleResolution": "node",
+		"incremental": true,
+		"sourceMap": true
 	},
 	"include": [
 		"credentials/**/*",
-		"nodes/**/*"
+		"nodes/**/*",
+		"package.json"
 	],
 	"exclude": [
 		"node_modules/**/*",
