chore: prepare package for npm registry publication
- Add bugs, publishConfig, and engines fields to package.json
- Expand files field to include README, LICENSE, and icons
- Add release script for n8n-node deployment
- Normalize repository URL to git+ format
- Create .npmignore to exclude source files and configs
- Update .gitignore to exclude .npmrc credentials
- Enhance README.md with npm badges and improved installation guide

--- a/package.json
+++ b/package.json
@@ -17,9 +17,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/neosapience/n8n-nodes-typecast.git"
+    "url": "git+https://github.com/neosapience/n8n-nodes-typecast.git"
+  },
+  "bugs": {
+    "url": "https://github.com/neosapience/n8n-nodes-typecast/issues"
   },
   "main": "index.js",
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
   "scripts": {
     "build": "n8n-node build",
     "build:watch": "tsc --watch",
@@ -27,10 +37,14 @@
     "format": "prettier nodes credentials --write",
     "lint": "n8n-node lint",
     "lint:fix": "n8n-node lint --fix",
-    "prepublishOnly": "n8n-node prerelease"
+    "prepublishOnly": "npm run lint && npm run build",
+    "release": "n8n-node release"
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md",
+    "LICENSE",
+    "icons"
   ],
   "n8n": {
     "n8nNodesApiVersion": 1,
