lint: update Typecast node configuration and improve documentation
- Refactored the Typecast node configuration for better readability and consistency.
- Adjusted the use of tabs in the .prettierrc.js file to false for uniformity.
- Enhanced the README.md to improve formatting and clarity of features and node structure.
- Updated tsconfig.json to maintain consistent formatting and structure.
- Improved the Typecast API credential and node descriptions for better user guidance.
- Added new fields and options in the speech and voice resources to enhance functionality and user experience.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,30 @@
 {
-	"compilerOptions": {
-		"target": "es2019",
-		"module": "commonjs",
-		"lib": [
-			"es2019",
-			"es2020",
-			"es2022.error"
-		],
-		"declaration": true,
-		"outDir": "./dist/",
-		"rootDir": "./",
-		"composite": true,
-		"removeComments": true,
-		"emitDecoratorMetadata": true,
-		"experimentalDecorators": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
-		"forceConsistentCasingInFileNames": true,
-		"strict": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"noImplicitReturns": true,
-		"noFallthroughCasesInSwitch": true,
-		"useUnknownInCatchVariables": false,
-		"moduleResolution": "node",
-		"incremental": true,
-		"sourceMap": true
-	},
-	"include": [
-		"credentials/**/*",
-		"nodes/**/*",
-		"package.json"
-	],
-	"exclude": [
-		"node_modules/**/*",
-		"dist/**/*"
-	]
+  "compilerOptions": {
+    "target": "es2019",
+    "module": "commonjs",
+    "lib": ["es2019", "es2020", "es2022.error"],
+    "declaration": true,
+    "outDir": "./dist/",
+    "rootDir": "./",
+    "composite": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "useUnknownInCatchVariables": false,
+    "moduleResolution": "node",
+    "incremental": true,
+    "sourceMap": true
+  },
+  "include": ["credentials/**/*", "nodes/**/*", "package.json"],
+  "exclude": ["node_modules/**/*", "dist/**/*"]
 }
